Colaboratory を使用して作成しました

--- a/kaggle06string.ipynb
+++ b/kaggle06string.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle06string.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOt0NZ9dtRYQYRLr2BwAAob",
+      "authorship_tag": "ABX9TyO9wwGWe1qXPJ2A8Vc/USua",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1211,7 +1211,7 @@
         "numbers = {'one':1, 'two':2, 'three':3}\n",
         "numbers['three']"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1253,7 +1253,7 @@
         "numbers['eleven'] = 11\n",
         "numbers"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1295,7 +1295,7 @@
         "numbers['one'] = 'Pluto'\n",
         "numbers"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1337,7 +1337,7 @@
         "planet_to_initial = { planet: planet[0] for planet in planets }\n",
         "planet_to_initial"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1385,7 +1385,7 @@
         "print ('Saturn' in planet_to_initial)\n",
         "print ('Betelgeuse' in planet_to_initial)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1400,39 +1400,40 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mVhLGDpmmCmt",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "tHY7e_OMTPms",
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "A for loop over a dictionary will loop over its keys\n"
+        "辞書で`for`ループを行うとキーについてループする。\n"
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
         "id": "mI8fEG97TRDU",
-        "colab_type": "text"
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "a5d95369-372e-4700-d663-e2aa76286798"
       },
       "source": [
-        "\n",
+        "numbers = {'one':1, 'two':2, 'three':3}\n",
         "for k in numbers:\n",
-        "    print(\"{} = {}\".format(k, numbers[k]))\n",
-        "one = Pluto\n",
-        "two = 2\n",
-        "three = 3\n",
-        "eleven = 11\n",
-        "```\n"
+        "    print(\"{} = {}\".format(k, numbers[k]))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "one = 1\n",
+            "two = 2\n",
+            "three = 3\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -1442,23 +1443,54 @@
         "colab_type": "text"
       },
       "source": [
+        "すべてのキーが欲しいときは`dict.keys()`、すべての値が欲しいときは`dict.values()`を使う。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C-Rh7WXbTTvB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "da75bba9-d494-4948-c017-e0cd8126ea16"
+      },
+      "source": [
+        "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
+        "planet_to_initial = { planet: planet[0] for planet in planets }\n",
         "\n",
-        "We can access a collection of all the keys or all the values with dict.keys() and dict.values(), respectively.\n"
+        "# Get all the initials, sort them alphabetically, and put them in a space-separated string.\n",
+        "' '.join(sorted(planet_to_initial.values()))\n"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'E J M M N S U V'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "C-Rh7WXbTTvB",
+        "id": "nZ1pZUhO0ofu",
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "```\n",
-        "# Get all the initials, sort them alphabetically, and put them in a space-separated string.\n",
-        "' '.join(sorted(planet_to_initial.values()))\n",
-        "'E J M M N S U V'\n",
-        "```\n"
+        "# いまここ"
       ]
     },
     {
@@ -1470,6 +1502,35 @@
       "source": [
         "\n",
         "The very useful dict.items() method lets us iterate over the keys and values of a dictionary simultaneously. (In Python jargon, an item refers to a key, value pair)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n6M3o2c607O6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168
+        },
+        "outputId": "a47acc0b-6a5c-4d08-fc87-0d5f211bc911"
+      },
+      "source": [
+        "' '.join(sorted(planet_to_initial.items()))"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-af736ebf6b1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m' '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplanet_to_initial\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: sequence item 0: expected str instance, tuple found"
+          ]
+        }
       ]
     },
     {
