Colaboratory を使用して作成しました

--- a/kaggle06string.ipynb
+++ b/kaggle06string.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle06string.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO9wwGWe1qXPJ2A8Vc/USua",
+      "authorship_tag": "ABX9TyMnj+RKiqlyOlJ+biEhz/Wp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1423,7 +1423,7 @@
         "for k in numbers:\n",
         "    print(\"{} = {}\".format(k, numbers[k]))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1464,7 +1464,7 @@
         "# Get all the initials, sort them alphabetically, and put them in a space-separated string.\n",
         "' '.join(sorted(planet_to_initial.values()))\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1486,22 +1486,57 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nZ1pZUhO0ofu",
+        "id": "T2k0VJiCdCBA",
         "colab_type": "text"
       },
       "source": [
-        "# いまここ"
+        "キーと値のペアを同時に取得するには次のようにする。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yx1iNjdRTV60",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 155
+        },
+        "outputId": "341d0eff-79f7-40f6-d186-112c5743109f"
+      },
+      "source": [
+        "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
+        "planet_to_initial = { planet: planet[0] for planet in planets }\n",
+        "\n",
+        "for planet, initial in planet_to_initial.items():\n",
+        "    print(\"{} begins with \\\"{}\\\"\".format(planet.rjust(10), initial))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "   Mercury begins with \"M\"\n",
+            "     Venus begins with \"V\"\n",
+            "     Earth begins with \"E\"\n",
+            "      Mars begins with \"M\"\n",
+            "   Jupiter begins with \"J\"\n",
+            "    Saturn begins with \"S\"\n",
+            "    Uranus begins with \"U\"\n",
+            "   Neptune begins with \"N\"\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XeUDkcq5TUu7",
+        "id": "MbnHvNGFdOmu",
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "The very useful dict.items() method lets us iterate over the keys and values of a dictionary simultaneously. (In Python jargon, an item refers to a key, value pair)\n"
+        "'dict.items()'という専用のメソッドもある。"
       ]
     },
     {
@@ -1511,48 +1546,30 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 168
+          "height": 155
         },
-        "outputId": "a47acc0b-6a5c-4d08-fc87-0d5f211bc911"
+        "outputId": "8ae32967-a395-4c74-a85a-889241859fb3"
       },
       "source": [
-        "' '.join(sorted(planet_to_initial.items()))"
+        "for pair in planet_to_initial.items() :\n",
+        "     print(\"{} begins with \\\"{}\\\"\".format(pair[0], pair[1]))"
       ],
-      "execution_count": 22,
+      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-af736ebf6b1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m' '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplanet_to_initial\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: sequence item 0: expected str instance, tuple found"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Mercury begins with \"M\"\n",
+            "Venus begins with \"V\"\n",
+            "Earth begins with \"E\"\n",
+            "Mars begins with \"M\"\n",
+            "Jupiter begins with \"J\"\n",
+            "Saturn begins with \"S\"\n",
+            "Uranus begins with \"U\"\n",
+            "Neptune begins with \"N\"\n"
+          ],
+          "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Yx1iNjdRTV60",
-        "colab_type": "text"
-      },
-      "source": [
-        "\n",
-        "```\n",
-        "for planet, initial in planet_to_initial.items():\n",
-        "    print(\"{} begins with \\\"{}\\\"\".format(planet.rjust(10), initial))\n",
-        "   Mercury begins with \"M\"\n",
-        "     Venus begins with \"V\"\n",
-        "     Earth begins with \"E\"\n",
-        "      Mars begins with \"M\"\n",
-        "   Jupiter begins with \"J\"\n",
-        "    Saturn begins with \"S\"\n",
-        "    Uranus begins with \"U\"\n",
-        "   Neptune begins with \"N\"\n",
-        "```\n"
       ]
     },
     {
@@ -1562,26 +1579,7 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "To read a full inventory of dictionaries' methods, click the \"output\" button below to read the full help page, or check out the official online documentation.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "oweAAeU6TYDn",
-        "colab_type": "text"
-      },
-      "source": [
-        "\n",
-        "```\n",
-        "help(dict)\n",
-        "Your Turn\n",
-        "You've learned a lot of Python... go test your skills with some realistic programming applications.\n",
-        "\n",
-        "Python Home Page\n",
-        "\n",
-        "Have questions or comments? Visit the Learn Discussion forum to chat with other Learners."
+        "辞書のメソッドにほかにどんなものがあるかは、`help(dict)`、もしくは公式ドキュメントを参照のこと。"
       ]
     },
     {
@@ -1601,62 +1599,66 @@
         "colab_type": "text"
       },
       "source": [
-        "問題 １\n",
+        "### 問題 0 文字列の長さ\n",
         "\n",
+        "次のプログラムの結果を予想してから実行する。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zAROb5mqUFt4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        },
+        "outputId": "2fdca98f-dd6c-4bc1-fba0-60695820fb31"
+      },
+      "source": [
+        "a = \"\"\n",
+        "length = len(a)\n",
+        "print (length)\n",
         "\n",
-        "**[Python Home Page](https://www.kaggle.com/learn/python)**\n",
+        "b = \"it's ok\"\n",
+        "length = len(b)\n",
+        "print (length)\n",
         "\n",
-        "---\n",
+        "c = 'it\\'s ok'\n",
+        "length = len(c)\n",
+        "print (length)\n",
         "\n",
+        "d = \"\"\"hey\"\"\"\n",
+        "length = len(d)\n",
+        "print (length)\n",
         "\n",
-        "# Try It Yourself\n",
-        "\n",
-        "You are almost done with the course. Nice job. \n",
-        "\n",
-        "Fortunately, we have a couple more interesting problems for you before you go. \n",
-        "\n",
-        "As always, run the setup code below before working on the questions.\n",
-        "\n",
-        "from learntools.core import binder; binder.bind(globals())\n",
-        "from learntools.python.ex6 import *\n",
-        "print('Setup complete.')\n",
-        "\n",
-        "# Exercises\n",
-        "\n",
-        "## 0. \n",
-        "\n",
-        "Let's start with a string lightning round to warm up. What are the lengths of the strings below?\n",
-        "\n",
-        "For each of the five strings below, predict what `len()` would return when passed that string. Use the variable `length` to record your answer, then run the cell to check whether you were right.  \n"
+        "e = '\\n'\n",
+        "length = len(e)\n",
+        "print (length)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "7\n",
+            "7\n",
+            "3\n",
+            "1\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zAROb5mqUFt4",
+        "id": "b70INT3WgcRu",
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "a = \"\"\n",
-        "length = ____\n",
-        "q0.a.check()\n",
-        "\n",
-        "b = \"it's ok\"\n",
-        "length = ____\n",
-        "q0.b.check()\n",
-        "\n",
-        "c = 'it\\'s ok'\n",
-        "length = ____\n",
-        "q0.c.check()\n",
-        "\n",
-        "d = \"\"\"hey\"\"\"\n",
-        "length = ____\n",
-        "q0.d.check()\n",
-        "\n",
-        "e = '\\n'\n",
-        "length = ____\n",
-        "q0.e.check()\n"
+        "# いまここ"
       ]
     },
     {
@@ -1666,8 +1668,7 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "## 1.\n",
+        "### 問題 1\n",
         "\n",
         "There is a saying that \"Data scientists spend 80% of their time cleaning data, and 20% of their time complaining about cleaning data.\" Let's see if you can write a function to help clean US zip code data. Given a string, it should return whether or not that string represents a valid zip code. For our purposes, a valid zip code is any string consisting of exactly 5 digits.\n",
         "\n",
