Colaboratory を使用して作成しました

--- a/kaggle06string.ipynb
+++ b/kaggle06string.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle06string.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMnj+RKiqlyOlJ+biEhz/Wp",
+      "authorship_tag": "ABX9TyOOiNqbXroVc+s5731vT27u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1511,7 +1511,7 @@
         "for planet, initial in planet_to_initial.items():\n",
         "    print(\"{} begins with \\\"{}\\\"\".format(planet.rjust(10), initial))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1554,7 +1554,7 @@
         "for pair in planet_to_initial.items() :\n",
         "     print(\"{} begins with \\\"{}\\\"\".format(pair[0], pair[1]))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1636,7 +1636,7 @@
         "length = len(e)\n",
         "print (length)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1654,7 +1654,60 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "b70INT3WgcRu",
+        "id": "QQCjZcQVUHUf",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 問題 1 データサイエンス\n",
+        "\n",
+        "データサイエンス学者は80%の時間をデータクリーニングに使い、残りの20%はデータクリーニングへの不平を言っている、という言い回しがある。\n",
+        "\n",
+        "アメリカの郵便番号をチェックするプログラムをつくる。今回は文字列がちょうど5桁であればオーケーとしよう。\n",
+        "\n",
+        "`str`のメソッドを調べるには`help(str)`を使う。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rjZbw1-CUKcC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        },
+        "outputId": "6534047d-838d-44f1-cc3b-579ff090229b"
+      },
+      "source": [
+        "def is_valid_zip(zip_code):\n",
+        "    \"\"\"Returns whether the input string is a valid (5 digit) zip code\n",
+        "    \"\"\"\n",
+        "    return len(zip_code) == 5\n",
+        "\n",
+        "print (is_valid_zip(\"12\"))\n",
+        "print (is_valid_zip(\"12345\"))\n",
+        "print (is_valid_zip(\"123456\"))\n",
+        "print (is_valid_zip(\"\"))\n",
+        "\n"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n",
+            "True\n",
+            "False\n",
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9AADx07poW-J",
         "colab_type": "text"
       },
       "source": [
@@ -1664,46 +1717,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QQCjZcQVUHUf",
-        "colab_type": "text"
-      },
-      "source": [
-        "### 問題 1\n",
-        "\n",
-        "There is a saying that \"Data scientists spend 80% of their time cleaning data, and 20% of their time complaining about cleaning data.\" Let's see if you can write a function to help clean US zip code data. Given a string, it should return whether or not that string represents a valid zip code. For our purposes, a valid zip code is any string consisting of exactly 5 digits.\n",
-        "\n",
-        "HINT: `str` has a method that will be useful here. Use `help(str)` to review a list of string methods.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "rjZbw1-CUKcC",
-        "colab_type": "text"
-      },
-      "source": [
-        "\n",
-        "def is_valid_zip(zip_code):\n",
-        "    \"\"\"Returns whether the input string is a valid (5 digit) zip code\n",
-        "    \"\"\"\n",
-        "    pass\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "35mV2wguUMCN",
         "colab_type": "text"
       },
       "source": [
+        "### 問題 2. フィルタリング\n",
         "\n",
-        "# Check your answer\n",
-        "q1.check()\n",
         "\n",
-        "#q1.hint()\n",
-        "#q1.solution()\n",
-        "\n",
-        "## 2.\n",
         "\n",
         "A researcher has gathered thousands of news articles. But she wants to focus her attention on articles including a specific word. Complete the function below to help her filter her list of articles.\n",
         "\n",
@@ -1715,10 +1735,11 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
         "id": "W1of5bkYUOPF",
-        "colab_type": "text"
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "\n",
@@ -1734,7 +1755,9 @@
         "    >>> [0]\n",
         "    \"\"\"\n",
         "    pass\n"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
