Colaboratory を使用して作成しました

--- a/kaggle06string.ipynb
+++ b/kaggle06string.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle06string.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPf0m1eAke2WTEHmNxxwRh4",
+      "authorship_tag": "ABX9TyPCjou1A36rDKRJukDBulGA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1727,13 +1727,9 @@
         "\n",
         "関数は次の基準を満たすものとする。\n",
         "\n",
-        "A researcher has gathered thousands of news articles. But she wants to focus her attention on articles including a specific word. Complete the function below to help her filter her list of articles.\n",
-        "\n",
-        "Your function should meet the following criteria:\n",
-        "\n",
-        "- Do not include documents where the keyword string shows up only as a part of a larger word. For example, if she were looking for the keyword “closed”, you would not include the string “enclosed.” \n",
-        "- She does not want you to distinguish upper case from lower case letters. So the phrase “Closed the case.” would be included when the keyword is “closed”\n",
-        "- Do not let periods or commas affect what is matched. “It is closed.” would be included when the keyword is “closed”. But you can assume there are no other types of punctuation.\n"
+        "- キーワードは単独で現れるものだけをとる。つまり\"closed\"だったら、\"enclosed\"は含まれない。\n",
+        "- 大文字小文字は区別しない。つまりキーワードが\"closed\"ならば\"Closed the case.\"は含まれる。\n",
+        "- ピリオドはマッチに影響しない。\"It is closed.\"は含まれる。他の句読点はないものとしてよい。"
       ]
     },
     {
@@ -1741,10 +1737,13 @@
       "metadata": {
         "id": "W1of5bkYUOPF",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "473d8f7f-cc99-4f6a-ca85-4dbe34a4ba85"
       },
       "source": [
-        "\n",
         "def word_search(doc_list, keyword):\n",
         "    \"\"\"\n",
         "    Takes a list of documents (each document is a string) and a keyword. \n",
@@ -1756,10 +1755,57 @@
         "    >>> word_search(doc_list, 'casino')\n",
         "    >>> [0]\n",
         "    \"\"\"\n",
-        "    pass\n"
+        "    return [doc.lower().find(keyword.lower()) for doc in doc_list]\n",
+        "\n",
+        "doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car\", \"Casinoville\"]\n",
+        "word_search(doc_list, 'casino')\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[27, -1, 0]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CuTjCqfYYOMF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "48050076-c1eb-4d30-dbf6-ee44f24f4c07"
+      },
+      "source": [
+        "# \"the Casino\".find(\"cas\")\n",
+        "\"ths Cas\".lower().find(\"cas\")"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "markdown",
