--- a/test_kernel.ipynb
+++ b/test_kernel.ipynb
@@ -9,8 +9,8 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "name": "ir",
+      "display_name": "R"
     }
   },
   "cells": [
