Colaboratory を使用して作成しました

--- a/kaggle06string.ipynb
+++ b/kaggle06string.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle06string.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMKmR3tiApIVO52p93Z4MUu",
+      "authorship_tag": "ABX9TyMm0L7xGV/fU6QBB5V1tLfx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1828,9 +1828,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         },
-        "outputId": "bda5e517-f012-49b7-ae85-f72d8baf2dda"
+        "outputId": "f3695164-537a-42f5-a676-b8d5857df71f"
       },
       "source": [
         "doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car\", \"Casinoville\"]\n",
@@ -1839,7 +1839,7 @@
         "match = [ doc.count(\"casino\".lower()) for doc in doc_list3]\n",
         "match"
       ],
-      "execution_count": 48,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1851,7 +1851,79 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "3Xrpnvf6Sw_H",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9b697fd6-a81d-4cc9-bbd2-bdc14a186660"
+      },
+      "source": [
+        "doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car\", \"Casinoville\", \"casomp. casomnp. casino\", \"\"]\n",
+        "doc_list2 = [doc.lower().strip(\".\") for doc in doc_list]\n",
+        "doc_list3 = [doc.split() for doc in doc_list2]\n",
+        "match = [ doc.count(\"casino\".lower()) for doc in doc_list3]\n",
+        "dictOfMatch = { i : match[i] for i in range(0, len(match))}\n",
+        "res = [key for key in dictOfMatch if dictOfMatch[key] > 0]\n",
+        "res"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 3]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "za-4rKSHWAWe",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9b697fd6-a81d-4cc9-bbd2-bdc14a186660"
+      },
+      "source": [
+        "doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car\", \"Casinoville\", \"casomp. casomnp. casino\", \"\"]\n",
+        "doc_list2 = [doc.lower().strip(\".\") for doc in doc_list]\n",
+        "doc_list3 = [doc.split() for doc in doc_list2]\n",
+        "match = [ doc.count(\"casino\".lower()) for doc in doc_list3]\n",
+        "dictOfMatch = { i : match[i] for i in range(0, len(match))}\n",
+        "res = [key for key in dictOfMatch if dictOfMatch[key] > 0]\n",
+        "res"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 3]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
         }
       ]
     },
