Colaboratory を使用して作成しました

--- a/kaggle06string.ipynb
+++ b/kaggle06string.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle06string.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMm0L7xGV/fU6QBB5V1tLfx",
+      "authorship_tag": "ABX9TyM62juHczDOHgqgDAA09UYQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1707,16 +1707,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9AADx07poW-J",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "35mV2wguUMCN",
         "colab_type": "text"
       },
@@ -1739,9 +1729,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         },
-        "outputId": "473d8f7f-cc99-4f6a-ca85-4dbe34a4ba85"
+        "outputId": "cabde228-d800-48fa-da86-ec42ce536ccb"
       },
       "source": [
         "def word_search(doc_list, keyword):\n",
@@ -1755,175 +1745,26 @@
         "    >>> word_search(doc_list, 'casino')\n",
         "    >>> [0]\n",
         "    \"\"\"\n",
-        "    doc_list2 = [doc.lower() for doc in doc_list]\n",
-        "    return [doc.lower().find(keyword.lower()) for doc in doc_list]\n",
+        "    match = [doc.lower().strip(\".\").split().count(keyword.lower()) for doc in doc_list]\n",
+        "    dictOfMatch = { i : match[i] for i in range(0, len(match))}\n",
+        "    return  [key for key in dictOfMatch if dictOfMatch[key] > 0]\n",
         "\n",
         "doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car\", \"Casinoville\"]\n",
         "word_search(doc_list, 'casino')\n"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[27, -1, 0]"
+              "[0]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CuTjCqfYYOMF",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "48050076-c1eb-4d30-dbf6-ee44f24f4c07"
-      },
-      "source": [
-        "# \"the Casino\".find(\"cas\")\n",
-        "\"ths Cas\".lower().find(\"cas\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "4"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 28
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ystNxzSbkrkX",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "help(dict)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7f9y1olkiQZ9",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "f3695164-537a-42f5-a676-b8d5857df71f"
-      },
-      "source": [
-        "doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car\", \"Casinoville\"]\n",
-        "doc_list2 = [doc.lower().strip(\".\") for doc in doc_list]\n",
-        "doc_list3 = [doc.split() for doc in doc_list2]\n",
-        "match = [ doc.count(\"casino\".lower()) for doc in doc_list3]\n",
-        "match"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[1, 0, 0]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "3Xrpnvf6Sw_H",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "9b697fd6-a81d-4cc9-bbd2-bdc14a186660"
-      },
-      "source": [
-        "doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car\", \"Casinoville\", \"casomp. casomnp. casino\", \"\"]\n",
-        "doc_list2 = [doc.lower().strip(\".\") for doc in doc_list]\n",
-        "doc_list3 = [doc.split() for doc in doc_list2]\n",
-        "match = [ doc.count(\"casino\".lower()) for doc in doc_list3]\n",
-        "dictOfMatch = { i : match[i] for i in range(0, len(match))}\n",
-        "res = [key for key in dictOfMatch if dictOfMatch[key] > 0]\n",
-        "res"
-      ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0, 3]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 13
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "za-4rKSHWAWe",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "9b697fd6-a81d-4cc9-bbd2-bdc14a186660"
-      },
-      "source": [
-        "doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car\", \"Casinoville\", \"casomp. casomnp. casino\", \"\"]\n",
-        "doc_list2 = [doc.lower().strip(\".\") for doc in doc_list]\n",
-        "doc_list3 = [doc.split() for doc in doc_list2]\n",
-        "match = [ doc.count(\"casino\".lower()) for doc in doc_list3]\n",
-        "dictOfMatch = { i : match[i] for i in range(0, len(match))}\n",
-        "res = [key for key in dictOfMatch if dictOfMatch[key] > 0]\n",
-        "res"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0, 3]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 13
+          "execution_count": 19
         }
       ]
     },
@@ -1934,22 +1775,25 @@
         "colab_type": "text"
       },
       "source": [
+        "## 問題 3 複数キーワード検索\n",
         "\n",
-        "## 3.\n",
+        "次に、研究者は複数のキーワードで検索したい、と思った。\n",
         "\n",
-        "Now the researcher wants to supply multiple keywords to search for. Complete the function below to help her.\n",
-        "\n",
-        "(You're encouraged to use the `word_search` function you just wrote when implementing this function. Reusing code in this way makes your programs more robust and readable - and it saves typing!)\n"
+        "いま作った`word_search`を利用して次の関数を作ること。\n"
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
         "id": "b0gLA2d0UQhF",
-        "colab_type": "text"
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ea4de62d-7e7b-49ba-a1e0-7654a9d56c78"
       },
       "source": [
-        "\n",
         "def multi_word_search(doc_list, keywords):\n",
         "    \"\"\"\n",
         "    Takes list of documents (each document is a string) and a list of keywords.  \n",
@@ -1961,8 +1805,29 @@
         "    >>> multi_word_search(doc_list, keywords)\n",
         "    {'casino': [0, 1], 'they': [1]}\n",
         "    \"\"\"\n",
-        "    pass\n",
-        "\n"
+        "    dictOfMatch = { keyword : word_search(doc_list, keyword) for keyword in keywords }\n",
+        "    \n",
+        "    return dictOfMatch\n",
+        "\n",
+        "doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car and a casino\", \"Casinoville\"]\n",
+        "keywords = ['casino', 'they']\n",
+        "\n",
+        "multi_word_search(doc_list, keywords)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'casino': [0, 1], 'they': [1]}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
       ]
     }
   ]
