--- a/kaggle07import.ipynb
+++ b/kaggle07import.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle07import.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNNHYt9wDiRQPkabXgYwkoD",
+      "authorship_tag": "ABX9TyPinBQV//dvTJWn98t9nMmc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,6 +50,256 @@
         "1. kaggleのPython tutorialをベスにColabのノートブックを作成している。\n",
         "1. Colabで開いて読まれることを想定。\n",
         "1. 元ファイル ( https://www.kaggle.com/colinmorris/working-with-external-libraries )\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u4_guYFInuq7",
+        "colab_type": "text"
+      },
+      "source": [
+        "In this lesson, I'll be talking about imports in Python, giving some tips for working with unfamiliar libraries (and the objects they return), and digging into the guts of Python just a bit to talk about operator overloading.\n",
+        "\n",
+        "Imports\n",
+        "So far we've talked about types and functions which are built-in to the language.\n",
+        "\n",
+        "But one of the best things about Python (especially if you're a data scientist) is the vast number of high-quality custom libraries that have been written for it.\n",
+        "\n",
+        "Some of these libraries are in the \"standard library\", meaning you can find them anywhere you run Python. Others libraries can be easily added, even if they aren't always shipped with Python.\n",
+        "\n",
+        "Either way, we'll access this code with imports.\n",
+        "\n",
+        "We'll start our example by importing math from the standard library.\n",
+        "\n",
+        "import math\n",
+        "\n",
+        "print(\"It's math! It has type {}\".format(type(math)))\n",
+        "It's math! It has type <class 'module'>\n",
+        "math is a module. A module is just a collection of variables (a namespace, if you like) defined by someone else. We can see all the names in math using the built-in function dir().\n",
+        "\n",
+        "print(dir(math))\n",
+        "['__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', 'acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'ceil', 'copysign', 'cos', 'cosh', 'degrees', 'e', 'erf', 'erfc', 'exp', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'inf', 'isclose', 'isfinite', 'isinf', 'isnan', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'nan', 'pi', 'pow', 'radians', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'tau', 'trunc']\n",
+        "We can access these variables using dot syntax. Some of them refer to simple values, like math.pi:\n",
+        "\n",
+        "print(\"pi to 4 significant digits = {:.4}\".format(math.pi))\n",
+        "pi to 4 significant digits = 3.142\n",
+        "But most of what we'll find in the module are functions, like math.log:\n",
+        "\n",
+        "math.log(32, 2)\n",
+        "5.0\n",
+        "Of course, if we don't know what math.log does, we can call help() on it:\n",
+        "\n",
+        "help(math.log)\n",
+        "Help on built-in function log in module math:\n",
+        "\n",
+        "log(...)\n",
+        "    log(x[, base])\n",
+        "    \n",
+        "    Return the logarithm of x to the given base.\n",
+        "    If the base not specified, returns the natural logarithm (base e) of x.\n",
+        "\n",
+        "We can also call help() on the module itself. This will give us the combined documentation for all the functions and values in the module (as well as a high-level description of the module). Click the \"output\" button to see the whole math help page.\n",
+        "\n",
+        "help(math)\n",
+        "Other import syntax\n",
+        "If we know we'll be using functions in math frequently we can import it under a shorter alias to save some typing (though in this case \"math\" is already pretty short).\n",
+        "\n",
+        "import math as mt\n",
+        "mt.pi\n",
+        "3.141592653589793\n",
+        "You may have seen code that does this with certain popular libraries like Pandas, Numpy, Tensorflow, or Matplotlib. For example, it's a common convention to import numpy as np and import pandas as pd.\n",
+        "\n",
+        "The as simply renames the imported module. It's equivalent to doing something like:\n",
+        "\n",
+        "import math\n",
+        "mt = math\n",
+        "Wouldn't it be great if we could refer to all the variables in the math module by themselves? i.e. if we could just refer to pi instead of math.pi or mt.pi? Good news: we can do that.\n",
+        "\n",
+        "from math import *\n",
+        "print(pi, log(32, 2))\n",
+        "3.141592653589793 5.0\n",
+        "import * makes all the module's variables directly accessible to you (without any dotted prefix).\n",
+        "\n",
+        "Bad news: some purists might grumble at you for doing this.\n",
+        "\n",
+        "Worse: they kind of have a point.\n",
+        "\n",
+        "from math import *\n",
+        "from numpy import *\n",
+        "print(pi, log(32, 2))\n",
+        "---------------------------------------------------------------------------\n",
+        "TypeError                                 Traceback (most recent call last)\n",
+        "<ipython-input-10-5045b296ad83> in <module>\n",
+        "      1 from math import *\n",
+        "      2 from numpy import *\n",
+        "----> 3 print(pi, log(32, 2))\n",
+        "\n",
+        "TypeError: return arrays must be of ArrayType\n",
+        "What the what? But it worked before!\n",
+        "\n",
+        "These kinds of \"star imports\" can occasionally lead to weird, difficult-to-debug situations.\n",
+        "\n",
+        "The problem in this case is that the math and numpy modules both have functions called log, but they have different semantics. Because we import from numpy second, its log overwrites (or \"shadows\") the log variable we imported from math.\n",
+        "\n",
+        "A good compromise is to import only the specific things we'll need from each module:\n",
+        "\n",
+        "from math import log, pi\n",
+        "from numpy import asarray\n",
+        "Submodules\n",
+        "We've seen that modules contain variables which can refer to functions or values. Something to be aware of is that they can also have variables referring to other modules.\n",
+        "\n",
+        "import numpy\n",
+        "print(\"numpy.random is a\", type(numpy.random))\n",
+        "print(\"it contains names such as...\",\n",
+        "      dir(numpy.random)[-15:]\n",
+        "     )\n",
+        "numpy.random is a <class 'module'>\n",
+        "it contains names such as... ['set_state', 'shuffle', 'standard_cauchy', 'standard_exponential', 'standard_gamma', 'standard_normal', 'standard_t', 'test', 'triangular', 'uniform', 'vonmises', 'wald', 'warnings', 'weibull', 'zipf']\n",
+        "So if we import numpy as above, then calling a function in the random \"submodule\" will require two dots.\n",
+        "\n",
+        "# Roll 10 dice\n",
+        "rolls = numpy.random.randint(low=1, high=6, size=10)\n",
+        "rolls\n",
+        "array([4, 1, 2, 2, 1, 3, 1, 1, 5, 2])\n",
+        "Oh the places you'll go, oh the objects you'll see\n",
+        "So after 6 lessons, you're a pro with ints, floats, bools, lists, strings, and dicts (right?).\n",
+        "\n",
+        "Even if that were true, it doesn't end there. As you work with various libraries for specialized tasks, you'll find that they define their own types which you'll have to learn to work with. For example, if you work with the graphing library matplotlib, you'll be coming into contact with objects it defines which represent Subplots, Figures, TickMarks, and Annotations. pandas functions will give you DataFrames and Series.\n",
+        "\n",
+        "In this section, I want to share with you a quick survival guide for working with strange types.\n",
+        "\n",
+        "Three tools for understanding strange objects\n",
+        "In the cell above, we saw that calling a numpy function gave us an \"array\". We've never seen anything like this before (not in this course anyways). But don't panic: we have three familiar builtin functions to help us here.\n",
+        "\n",
+        "1: type() (what is this thing?)\n",
+        "\n",
+        "type(rolls)\n",
+        "numpy.ndarray\n",
+        "2: dir() (what can I do with it?)\n",
+        "\n",
+        "print(dir(rolls))\n",
+        "['T', '__abs__', '__add__', '__and__', '__array__', '__array_finalize__', '__array_function__', '__array_interface__', '__array_prepare__', '__array_priority__', '__array_struct__', '__array_ufunc__', '__array_wrap__', '__bool__', '__class__', '__complex__', '__contains__', '__copy__', '__deepcopy__', '__delattr__', '__delitem__', '__dir__', '__divmod__', '__doc__', '__eq__', '__float__', '__floordiv__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__gt__', '__hash__', '__iadd__', '__iand__', '__ifloordiv__', '__ilshift__', '__imatmul__', '__imod__', '__imul__', '__index__', '__init__', '__init_subclass__', '__int__', '__invert__', '__ior__', '__ipow__', '__irshift__', '__isub__', '__iter__', '__itruediv__', '__ixor__', '__le__', '__len__', '__lshift__', '__lt__', '__matmul__', '__mod__', '__mul__', '__ne__', '__neg__', '__new__', '__or__', '__pos__', '__pow__', '__radd__', '__rand__', '__rdivmod__', '__reduce__', '__reduce_ex__', '__repr__', '__rfloordiv__', '__rlshift__', '__rmatmul__', '__rmod__', '__rmul__', '__ror__', '__rpow__', '__rrshift__', '__rshift__', '__rsub__', '__rtruediv__', '__rxor__', '__setattr__', '__setitem__', '__setstate__', '__sizeof__', '__str__', '__sub__', '__subclasshook__', '__truediv__', '__xor__', 'all', 'any', 'argmax', 'argmin', 'argpartition', 'argsort', 'astype', 'base', 'byteswap', 'choose', 'clip', 'compress', 'conj', 'conjugate', 'copy', 'ctypes', 'cumprod', 'cumsum', 'data', 'diagonal', 'dot', 'dtype', 'dump', 'dumps', 'fill', 'flags', 'flat', 'flatten', 'getfield', 'imag', 'item', 'itemset', 'itemsize', 'max', 'mean', 'min', 'nbytes', 'ndim', 'newbyteorder', 'nonzero', 'partition', 'prod', 'ptp', 'put', 'ravel', 'real', 'repeat', 'reshape', 'resize', 'round', 'searchsorted', 'setfield', 'setflags', 'shape', 'size', 'sort', 'squeeze', 'std', 'strides', 'sum', 'swapaxes', 'take', 'tobytes', 'tofile', 'tolist', 'tostring', 'trace', 'transpose', 'var', 'view']\n",
+        "# What am I trying to do with this dice roll data? Maybe I want the average roll, in which case the \"mean\"\n",
+        "# method looks promising...\n",
+        "rolls.mean()\n",
+        "2.2\n",
+        "# Or maybe I just want to get back on familiar ground, in which case I might want to check out \"tolist\"\n",
+        "rolls.tolist()\n",
+        "[4, 1, 2, 2, 1, 3, 1, 1, 5, 2]\n",
+        "3: help() (tell me more)\n",
+        "\n",
+        "# That \"ravel\" attribute sounds interesting. I'm a big classical music fan.\n",
+        "help(rolls.ravel)\n",
+        "Help on built-in function ravel:\n",
+        "\n",
+        "ravel(...) method of numpy.ndarray instance\n",
+        "    a.ravel([order])\n",
+        "    \n",
+        "    Return a flattened array.\n",
+        "    \n",
+        "    Refer to `numpy.ravel` for full documentation.\n",
+        "    \n",
+        "    See Also\n",
+        "    --------\n",
+        "    numpy.ravel : equivalent function\n",
+        "    \n",
+        "    ndarray.flat : a flat iterator on the array.\n",
+        "\n",
+        "# Okay, just tell me everything there is to know about numpy.ndarray\n",
+        "# (Click the \"output\" button to see the novel-length output)\n",
+        "help(rolls)\n",
+        "(Of course, you might also prefer to check out the online docs)\n",
+        "\n",
+        "Operator overloading\n",
+        "What's the value of the below expression?\n",
+        "\n",
+        "[3, 4, 1, 2, 2, 1] + 10\n",
+        "---------------------------------------------------------------------------\n",
+        "TypeError                                 Traceback (most recent call last)\n",
+        "<ipython-input-20-a2508fc27c2b> in <module>\n",
+        "----> 1 [3, 4, 1, 2, 2, 1] + 10\n",
+        "\n",
+        "TypeError: can only concatenate list (not \"int\") to list\n",
+        "What a silly question. Of course it's an error.\n",
+        "\n",
+        "But what about...\n",
+        "\n",
+        "rolls + 10\n",
+        "array([14, 11, 12, 12, 11, 13, 11, 11, 15, 12])\n",
+        "We might think that Python strictly polices how pieces of its core syntax behave such as +, <, in, ==, or square brackets for indexing and slicing. But in fact, it takes a very hands-off approach. When you define a new type, you can choose how addition works for it, or what it means for an object of that type to be equal to something else.\n",
+        "\n",
+        "The designers of lists decided that adding them to numbers wasn't allowed. The designers of numpy arrays went a different way (adding the number to each element of the array).\n",
+        "\n",
+        "Here are a few more examples of how numpy arrays interact unexpectedly with Python operators (or at least differently from lists).\n",
+        "\n",
+        "# At which indices are the dice less than or equal to 3?\n",
+        "rolls <= 3\n",
+        "array([False,  True,  True,  True,  True,  True,  True,  True, False,\n",
+        "        True])\n",
+        "xlist = [[1,2,3],[2,4,6],]\n",
+        "# Create a 2-dimensional array\n",
+        "x = numpy.asarray(xlist)\n",
+        "print(\"xlist = {}\\nx =\\n{}\".format(xlist, x))\n",
+        "xlist = [[1, 2, 3], [2, 4, 6]]\n",
+        "x =\n",
+        "[[1 2 3]\n",
+        " [2 4 6]]\n",
+        "# Get the last element of the second row of our numpy array\n",
+        "x[1,-1]\n",
+        "6\n",
+        "# Get the last element of the second sublist of our nested list?\n",
+        "xlist[1,-1]\n",
+        "---------------------------------------------------------------------------\n",
+        "TypeError                                 Traceback (most recent call last)\n",
+        "<ipython-input-25-e2f4c7f35788> in <module>\n",
+        "      1 # Get the last element of the second sublist of our nested list?\n",
+        "----> 2 xlist[1,-1]\n",
+        "\n",
+        "TypeError: list indices must be integers or slices, not tuple\n",
+        "numpy's ndarray type is specialized for working with multi-dimensional data, so it defines its own logic for indexing, allowing us to index by a tuple to specify the index at each dimension.\n",
+        "\n",
+        "When does 1 + 1 not equal 2?\n",
+        "Things can get weirder than this. You may have heard of (or even used) tensorflow, a Python library popularly used for deep learning. It makes extensive use of operator overloading.\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "# Create two constants, each with value 1\n",
+        "a = tf.constant(1)\n",
+        "b = tf.constant(1)\n",
+        "# Add them together to get...\n",
+        "a + b\n",
+        "<tf.Tensor 'add:0' shape=() dtype=int32>\n",
+        "a + b isn't 2, it is (to quote tensorflow's documentation)...\n",
+        "\n",
+        "a symbolic handle to one of the outputs of an Operation. It does not hold the values of that operation's output, but instead provides a means of computing those values in a TensorFlow tf.Session.\n",
+        "\n",
+        "It's important just to be aware of the fact that this sort of thing is possible and that libraries will often use operator overloading in non-obvious or magical-seeming ways.\n",
+        "\n",
+        "Understanding how Python's operators work when applied to ints, strings, and lists is no guarantee that you'll be able to immediately understand what they do when applied to a tensorflow Tensor, or a numpy ndarray, or a pandas DataFrame.\n",
+        "\n",
+        "Once you've had a little taste of DataFrames, for example, an expression like the one below starts to look appealingly intuitive:\n",
+        "\n",
+        "# Get the rows with population over 1m in South America\n",
+        "df[(df['population'] > 10**6) & (df['continent'] == 'South America')]\n",
+        "But why does it work? The example above features something like 5 different overloaded operators. What's each of those operations doing? It can help to know the answer when things start going wrong.\n",
+        "\n",
+        "Curious how it all works?\n",
+        "Have you ever called help() or dir() on an object and wondered what the heck all those names with the double-underscores were?\n",
+        "\n",
+        "print(dir(list))\n",
+        "['__add__', '__class__', '__contains__', '__delattr__', '__delitem__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__gt__', '__hash__', '__iadd__', '__imul__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__reversed__', '__rmul__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']\n",
+        "This turns out to be directly related to operator overloading.\n",
+        "\n",
+        "When Python programmers want to define how operators behave on their types, they do so by implementing methods with special names beginning and ending with 2 underscores such as __lt__, __setattr__, or __contains__. Generally, names that follow this double-underscore format have a special meaning to Python.\n",
+        "\n",
+        "So, for example, the expression x in [1, 2, 3] is actually calling the list method __contains__ behind-the-scenes. It's equivalent to (the much uglier) [1, 2, 3].__contains__(x).\n",
+        "\n",
+        "If you're curious to learn more, you can check out Python's official documentation, which describes many, many more of these special \"underscores\" methods.\n",
+        "\n",
+        "We won't be defining our own types in these lessons (if only there was time!), but I hope you'll get to experience the joys of defining your own wonderful, weird types later down the road.\n",
+        "\n",
+        "Your turn!\n",
+        "Head over to the final coding exercise for one more round of coding questions involving imports, working with unfamiliar objects, and, of course, more gambling."
       ]
     }
   ]
