--- a/kaggle07import.ipynb
+++ b/kaggle07import.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle07import.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPinBQV//dvTJWn98t9nMmc",
+      "authorship_tag": "ABX9TyORp06ZBgaPLlQ86Tyd5HR9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,9 +59,20 @@
         "colab_type": "text"
       },
       "source": [
-        "In this lesson, I'll be talking about imports in Python, giving some tips for working with unfamiliar libraries (and the objects they return), and digging into the guts of Python just a bit to talk about operator overloading.\n",
+        "# はじめに\n",
         "\n",
-        "Imports\n",
+        "この章では、インポート`import`、ライブラリー`library`とそのオブジェクト`object`、演算子オーバーロード`operator overload`について学ぶ。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y8zUSv8vtenR",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Imports\n",
+        "\n",
         "So far we've talked about types and functions which are built-in to the language.\n",
         "\n",
         "But one of the best things about Python (especially if you're a data scientist) is the vast number of high-quality custom libraries that have been written for it.\n",
@@ -71,60 +82,67 @@
         "Either way, we'll access this code with imports.\n",
         "\n",
         "We'll start our example by importing math from the standard library.\n",
-        "\n",
+        "```\n",
         "import math\n",
         "\n",
         "print(\"It's math! It has type {}\".format(type(math)))\n",
         "It's math! It has type <class 'module'>\n",
+        "```\n",
         "math is a module. A module is just a collection of variables (a namespace, if you like) defined by someone else. We can see all the names in math using the built-in function dir().\n",
-        "\n",
+        "```\n",
         "print(dir(math))\n",
         "['__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', 'acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'ceil', 'copysign', 'cos', 'cosh', 'degrees', 'e', 'erf', 'erfc', 'exp', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'inf', 'isclose', 'isfinite', 'isinf', 'isnan', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'nan', 'pi', 'pow', 'radians', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'tau', 'trunc']\n",
+        "```\n",
         "We can access these variables using dot syntax. Some of them refer to simple values, like math.pi:\n",
         "\n",
         "print(\"pi to 4 significant digits = {:.4}\".format(math.pi))\n",
         "pi to 4 significant digits = 3.142\n",
         "But most of what we'll find in the module are functions, like math.log:\n",
-        "\n",
+        "```\n",
         "math.log(32, 2)\n",
         "5.0\n",
+        "```\n",
         "Of course, if we don't know what math.log does, we can call help() on it:\n",
-        "\n",
+        "```\n",
         "help(math.log)\n",
+        "```\n",
         "Help on built-in function log in module math:\n",
-        "\n",
+        "```\n",
         "log(...)\n",
         "    log(x[, base])\n",
         "    \n",
         "    Return the logarithm of x to the given base.\n",
         "    If the base not specified, returns the natural logarithm (base e) of x.\n",
-        "\n",
+        "```\n",
         "We can also call help() on the module itself. This will give us the combined documentation for all the functions and values in the module (as well as a high-level description of the module). Click the \"output\" button to see the whole math help page.\n",
-        "\n",
+        "```\n",
         "help(math)\n",
         "Other import syntax\n",
+        "```\n",
         "If we know we'll be using functions in math frequently we can import it under a shorter alias to save some typing (though in this case \"math\" is already pretty short).\n",
-        "\n",
+        "```\n",
         "import math as mt\n",
         "mt.pi\n",
         "3.141592653589793\n",
+        "```\n",
         "You may have seen code that does this with certain popular libraries like Pandas, Numpy, Tensorflow, or Matplotlib. For example, it's a common convention to import numpy as np and import pandas as pd.\n",
         "\n",
         "The as simply renames the imported module. It's equivalent to doing something like:\n",
-        "\n",
+        "```\n",
         "import math\n",
         "mt = math\n",
+        "```\n",
         "Wouldn't it be great if we could refer to all the variables in the math module by themselves? i.e. if we could just refer to pi instead of math.pi or mt.pi? Good news: we can do that.\n",
-        "\n",
+        "```\n",
         "from math import *\n",
         "print(pi, log(32, 2))\n",
         "3.141592653589793 5.0\n",
         "import * makes all the module's variables directly accessible to you (without any dotted prefix).\n",
-        "\n",
+        "```\n",
         "Bad news: some purists might grumble at you for doing this.\n",
         "\n",
         "Worse: they kind of have a point.\n",
-        "\n",
+        "```\n",
         "from math import *\n",
         "from numpy import *\n",
         "print(pi, log(32, 2))\n",
@@ -134,8 +152,10 @@
         "      1 from math import *\n",
         "      2 from numpy import *\n",
         "----> 3 print(pi, log(32, 2))\n",
-        "\n",
+        "```\n",
         "TypeError: return arrays must be of ArrayType\n",
+        "\n",
+        "\n",
         "What the what? But it worked before!\n",
         "\n",
         "These kinds of \"star imports\" can occasionally lead to weird, difficult-to-debug situations.\n",
@@ -143,12 +163,14 @@
         "The problem in this case is that the math and numpy modules both have functions called log, but they have different semantics. Because we import from numpy second, its log overwrites (or \"shadows\") the log variable we imported from math.\n",
         "\n",
         "A good compromise is to import only the specific things we'll need from each module:\n",
-        "\n",
+        "```\n",
         "from math import log, pi\n",
         "from numpy import asarray\n",
         "Submodules\n",
-        "We've seen that modules contain variables which can refer to functions or values. Something to be aware of is that they can also have variables referring to other modules.\n",
+        "```\n",
         "\n",
+        "We've seen that modules contain variables which can refer to functions or values. Something to be aware of is that they can also have variables referring to other modules.\n",
+        "```\n",
         "import numpy\n",
         "print(\"numpy.random is a\", type(numpy.random))\n",
         "print(\"it contains names such as...\",\n",
@@ -156,12 +178,16 @@
         "     )\n",
         "numpy.random is a <class 'module'>\n",
         "it contains names such as... ['set_state', 'shuffle', 'standard_cauchy', 'standard_exponential', 'standard_gamma', 'standard_normal', 'standard_t', 'test', 'triangular', 'uniform', 'vonmises', 'wald', 'warnings', 'weibull', 'zipf']\n",
-        "So if we import numpy as above, then calling a function in the random \"submodule\" will require two dots.\n",
+        "```\n",
         "\n",
+        "So if we import numpy as above, then calling a function in the random \"submodule\" will require two dots.\n",
+        "```\n",
         "# Roll 10 dice\n",
+        "\n",
         "rolls = numpy.random.randint(low=1, high=6, size=10)\n",
         "rolls\n",
         "array([4, 1, 2, 2, 1, 3, 1, 1, 5, 2])\n",
+        "```\n",
         "Oh the places you'll go, oh the objects you'll see\n",
         "So after 6 lessons, you're a pro with ints, floats, bools, lists, strings, and dicts (right?).\n",
         "\n",
@@ -169,9 +195,9 @@
         "\n",
         "In this section, I want to share with you a quick survival guide for working with strange types.\n",
         "\n",
-        "Three tools for understanding strange objects\n",
+        "### Three tools for understanding strange objects\n",
         "In the cell above, we saw that calling a numpy function gave us an \"array\". We've never seen anything like this before (not in this course anyways). But don't panic: we have three familiar builtin functions to help us here.\n",
-        "\n",
+        "```\n",
         "1: type() (what is this thing?)\n",
         "\n",
         "type(rolls)\n",
@@ -210,29 +236,30 @@
         "# (Click the \"output\" button to see the novel-length output)\n",
         "help(rolls)\n",
         "(Of course, you might also prefer to check out the online docs)\n",
-        "\n",
-        "Operator overloading\n",
+        "```\n",
+        "# Operator overloading\n",
         "What's the value of the below expression?\n",
-        "\n",
+        "```\n",
         "[3, 4, 1, 2, 2, 1] + 10\n",
         "---------------------------------------------------------------------------\n",
         "TypeError                                 Traceback (most recent call last)\n",
         "<ipython-input-20-a2508fc27c2b> in <module>\n",
         "----> 1 [3, 4, 1, 2, 2, 1] + 10\n",
-        "\n",
+        "```\n",
         "TypeError: can only concatenate list (not \"int\") to list\n",
         "What a silly question. Of course it's an error.\n",
         "\n",
         "But what about...\n",
-        "\n",
+        "```\n",
         "rolls + 10\n",
         "array([14, 11, 12, 12, 11, 13, 11, 11, 15, 12])\n",
+        "```\n",
         "We might think that Python strictly polices how pieces of its core syntax behave such as +, <, in, ==, or square brackets for indexing and slicing. But in fact, it takes a very hands-off approach. When you define a new type, you can choose how addition works for it, or what it means for an object of that type to be equal to something else.\n",
         "\n",
         "The designers of lists decided that adding them to numbers wasn't allowed. The designers of numpy arrays went a different way (adding the number to each element of the array).\n",
         "\n",
         "Here are a few more examples of how numpy arrays interact unexpectedly with Python operators (or at least differently from lists).\n",
-        "\n",
+        "```\n",
         "# At which indices are the dice less than or equal to 3?\n",
         "rolls <= 3\n",
         "array([False,  True,  True,  True,  True,  True,  True,  True, False,\n",
@@ -255,13 +282,16 @@
         "<ipython-input-25-e2f4c7f35788> in <module>\n",
         "      1 # Get the last element of the second sublist of our nested list?\n",
         "----> 2 xlist[1,-1]\n",
+        "```\n",
         "\n",
         "TypeError: list indices must be integers or slices, not tuple\n",
         "numpy's ndarray type is specialized for working with multi-dimensional data, so it defines its own logic for indexing, allowing us to index by a tuple to specify the index at each dimension.\n",
-        "\n",
+        "```\n",
         "When does 1 + 1 not equal 2?\n",
-        "Things can get weirder than this. You may have heard of (or even used) tensorflow, a Python library popularly used for deep learning. It makes extensive use of operator overloading.\n",
+        "```\n",
         "\n",
+        "Things can get weirder than this. You may have heard of (or even used) tensorflow, a Python library popularly used for deep learning. It makes extensive use of operator overloading.\n",
+        "```\n",
         "import tensorflow as tf\n",
         "# Create two constants, each with value 1\n",
         "a = tf.constant(1)\n",
@@ -269,6 +299,8 @@
         "# Add them together to get...\n",
         "a + b\n",
         "<tf.Tensor 'add:0' shape=() dtype=int32>\n",
+        "```\n",
+        "\n",
         "a + b isn't 2, it is (to quote tensorflow's documentation)...\n",
         "\n",
         "a symbolic handle to one of the outputs of an Operation. It does not hold the values of that operation's output, but instead provides a means of computing those values in a TensorFlow tf.Session.\n",
@@ -278,16 +310,19 @@
         "Understanding how Python's operators work when applied to ints, strings, and lists is no guarantee that you'll be able to immediately understand what they do when applied to a tensorflow Tensor, or a numpy ndarray, or a pandas DataFrame.\n",
         "\n",
         "Once you've had a little taste of DataFrames, for example, an expression like the one below starts to look appealingly intuitive:\n",
-        "\n",
+        "```\n",
         "# Get the rows with population over 1m in South America\n",
         "df[(df['population'] > 10**6) & (df['continent'] == 'South America')]\n",
+        "```\n",
         "But why does it work? The example above features something like 5 different overloaded operators. What's each of those operations doing? It can help to know the answer when things start going wrong.\n",
         "\n",
         "Curious how it all works?\n",
-        "Have you ever called help() or dir() on an object and wondered what the heck all those names with the double-underscores were?\n",
         "\n",
+        "Have you ever called help() or dir() on an object and wondered what the heck all those names with the double-underscores were?\n",
+        "```\n",
         "print(dir(list))\n",
         "['__add__', '__class__', '__contains__', '__delattr__', '__delitem__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__gt__', '__hash__', '__iadd__', '__imul__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__reversed__', '__rmul__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']\n",
+        "```\n",
         "This turns out to be directly related to operator overloading.\n",
         "\n",
         "When Python programmers want to define how operators behave on their types, they do so by implementing methods with special names beginning and ending with 2 underscores such as __lt__, __setattr__, or __contains__. Generally, names that follow this double-underscore format have a special meaning to Python.\n",
